--- a/frontend/src/app/components/manage-school/manage-school-sidebar/manage-school-sidebar.component.html
+++ b/frontend/src/app/components/manage-school/manage-school-sidebar/manage-school-sidebar.component.html
@@ -58,4 +58,15 @@
       <span class="ml-3">Levels</span>
     </a>
   </li>
+  <li class="my-px">
+    <a
+      (click)="hideSidebarIfOverlapping()"
+      routerLink="/scheduel"
+      routerLinkActive="bg-skin-muted"
+      [routerLinkActiveOptions]="{exact: true}"
+      class="flex flex-row items-center h-10 px-3 rounded-lg text-skin-base hover:bg-skin-muted"
+    >
+      <span class="ml-3">Scheduel</span>
+    </a>
+  </li>
 </div>
