--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -263,6 +263,22 @@
   <div>
     <div class="rounded-lg">
       <div>
+        <div routerLink="/scheduel"
+             class="text-white bg-skin-base rounded-lg h-60 flex items-center justify-center text-4xl transition-opacity duration-150 hover:opacity-80 hover:shadow-2xl hover:-m-1 hover:underline underline-offset-4 cursor-pointer bg-cover bg-center">
+          <img src="https://wallpapercave.com/wp/wp10448306.jpg"
+               class="h-full w-full object-cover overflow-hidden rounded-lg"
+               alt="image">
+          <div
+            class="absolute z-10 bg-black text-white rounded-lg p-2 bg-opacity-50">
+            <span>Scheduel</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div class="rounded-lg">
+      <div>
         <div routerLink="/profile"
              class="text-white bg-skin-base rounded-lg h-60 flex items-center justify-center text-4xl transition-opacity duration-150 hover:opacity-80 hover:shadow-2xl hover:-m-1 hover:underline underline-offset-4 cursor-pointer bg-cover bg-center">
           <img
@@ -277,6 +293,7 @@
       </div>
     </div>
   </div>
+
   <div>
     <div class="rounded-lg">
       <div>
@@ -293,6 +310,7 @@
       </div>
     </div>
   </div>
+
 </div>
 
 <ng-template #loading>
