--- a/frontend/src/app/components/manage-school/scheduel/scheduel.component.html
+++ b/frontend/src/app/components/manage-school/scheduel/scheduel.component.html
@@ -18,22 +18,24 @@
     <button class="py-1 mb-5 mt-1 ml-2" id="student" (click)="receiver('class')">Class</button>
   </div>
 
-  <form class="bg-skin-base w-full" id="editClassForm" (submit)="submit()">
+  <form class="bg-skin-base w-full" id="addScheduelForm" (submit)="submit()">
 
     Title
     <input required [(ngModel)]="title" type="text" name="title"
            class="block py-1 mb-5 mt-1 bg-skin-muted w-full lg:w-1/4">
     Description
-    <input required [(ngModel)]="desc" type="text" name="desc"
-           class="block py-1 mb-5 mt-1 bg-skin-muted w-full lg:w-1/4">
+    <textarea required [(ngModel)]="desc" name="content" maxlength="2000"
+              class="block py-1  px-11 mb-5 mt-1 bg-skin-muted w-full h-60 resize-y">
+                </textarea>
     Import file
 
+    <button type="button" (click)="chooseFile()" style="background: rgb(136, 136, 136);"
+            class="btn-submit mt-3 block py-1 mb-5 mt-1 w-full lg:w-1/4">Add Work
+    </button>
+    <input type="file" id="fileInput" style="display: none" accept=".doc, .docx" (change)="onFileSelected($event)">
 
-    <button type="button" (click)="chooseFile()" style="background: rgb(136, 136, 136);"  class="btn-submit mt-3 block py-1 mb-5 mt-1 w-full lg:w-1/4">Add Work</button>
-    <input  type="file" id="fileInput" style="display: none" accept=".doc, .docx" (change)="onFileSelected($event)">
-
-    <div *ngIf="file" >
-      <img class="file-upload-image-scheduel" src="assets/wordicon.png" alt="your image" />
+    <div *ngIf="file">
+      <img class="file-upload-image-scheduel" src="assets/wordicon.png" alt="your image"/>
       {{file.name}}
 
     </div>
@@ -51,7 +53,7 @@
     </div>
     <div *ngIf="chooseReciever == 'class'">
       <div *ngIf="classes$ | async as classes">
-              Classes
+        Classes
         <select [(ngModel)]="classe"
                 class="block py-1 mb-5 mt-1 bg-skin-muted w-full lg:w-1/4" name="teacherId">
           <option *ngFor="let classe of classes.content"
@@ -59,5 +61,9 @@
         </select>
       </div>
     </div>
+    <div class="px-2 w-full flex flex-1 justify-center sm:px-6 bg-skin-base">
+      <input type="submit" form="addScheduelForm" value="Create"
+             class="cursor-pointer btn-submit  w-full justify-center rounded-md border border-transparent px-24 py-2  font-medium shadow-sm focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
+   </div>
   </form>
 </div>
