--- a/frontend/src/app/components/activities/edit-activity/edit-activity.component.html
+++ b/frontend/src/app/components/activities/edit-activity/edit-activity.component.html
@@ -28,8 +28,15 @@
                 Date*
                 <input required [(ngModel)]="date" type="date" name="date"
                        class="block py-1 mb-5 mt-1 bg-skin-muted w-full lg:w-1/4">
+
+                
+                <div >
+                  <button type="button" (click)="chooseFile()" style="background: rgb(136, 136, 136);  width:275px"  class="btn-submit mt-3 block py-1 mb-5 mt-1 w-full lg:w-1/4">Add File</button>
+                  <input  type="file" id="fileInput" style="display: none" accept=".doc, .docx" (change)="onFileSelected($event)"> 
+                  <span>{{file_name || ""}}</span> 
+                </div>
+
               </form>
-              <div class="text-left">* field is required</div>
             </div>
           </div>
         </div>
