--- a/frontend/src/app/components/posts/edit-post/edit-post.component.html
+++ b/frontend/src/app/components/posts/edit-post/edit-post.component.html
@@ -22,8 +22,12 @@
                 <textarea required [(ngModel)]="content" name="content" maxlength="2000"
                           class="block py-1  mb-5 mt-1 bg-skin-muted w-full h-60 resize-y">
                 </textarea>
+                <div style="align-items: center; margin-left:30%;">
+                  <button type="button" (click)="chooseFile()" style="background: rgb(136, 136, 136);  width:400px"  class="btn-submit mt-3 block py-1 mb-5 mt-1 w-full lg:w-1/4">Add File</button>
+                  <input  type="file" id="fileInput" style="display: none" accept=".doc, .docx" (change)="onFileSelected($event)"> 
+                  <span>{{file_name || ""}}</span> 
+                </div>
               </form>
-              <div class="text-left">* field is required</div>
             </div>
           </div>
         </div>
