--- a/frontend/src/app/components/view-scheduel/view-scheduel.component.html
+++ b/frontend/src/app/components/view-scheduel/view-scheduel.component.html
@@ -1,12 +1,12 @@
 
-<div  *ngIf="authService.getRole() == 'TEACHER' || authService.getRole() == 'STUDENT' " class="bg-skin-base rounded-lg min-h-60 p-10 md:w-1/2 md:border-l-0 border-r-4 border-l-4 border-teal-600">
+<div  *ngIf="authService.getRole() == 'TEACHER' || authService.getRole() == 'STUDENT' " class="bg-skin-base rounded-lg min-h-60 p-10 md:w-1/3 md:border-l-0 border-r-4 border-l-4 border-teal-600">
   <span class="text-lg underline underline-offset-8">Your scheduel</span>
-  <div *ngIf="scheduel$ | async as scheduels; else loading">
-    <div>
+  <div *ngIf="scheduel$ | async as scheduels ; else loading">
+    <div *ngIf="!scheduels.archived">
         <div
              class="flex flex-col shadow-xl text-center bg-skin-muted rounded-xl p-3 w-full">
           <span class="font-bold text-xl">Title: {{scheduels?.title}}</span>
-          <span ><img class="h-20 w-20  border-none object-cover imgh" src="assets/fileimage.png" (click)="openlink(scheduels.file_url)"/> </span>
+          <span ><img class="h-20 w-20 ml-40 border-none object-cover imgh" src="assets/fileimage.png" (click)="openlink(scheduels.file_url)"/> </span>
           <span>Discription: {{scheduels.description}}</span>
           <p class="mt-5"></p>
         </div>
@@ -17,7 +17,6 @@
   </div>
 </div>
 
-{{schoolClassName | json}}
 
 
 
